--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "cal.js",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "node-fetch": "^3.2.1"
+    "express": "^4.17.3",
+    "mongoose": "^6.2.7",
+    "node-fetch": "^3.2.1",
+    "nodemon": "^2.0.15",
+    "stream-json": "^1.7.4"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "npm run cal.js"
+    "devStart": "nodemon server.js"
   },
   "repository": {
     "type": "git",
