--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "devStart": "nodemon server.js"
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
